--- a/style.css
+++ b/style.css
@@ -141,7 +141,7 @@ font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif ;
 .publicaciones .parrafo-post{
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 16px;
-    color: #848484;
+    color: black;
     padding: 5px;
 }
 
