--- a/present.css
+++ b/present.css
@@ -91,7 +91,7 @@ body{
     left: 0;
     width: 100%;
     height: 100%;
-    background: url(Imga/fotos/w1.jpeg);
+    background: url(Imga/fotos/14.jpg);
     background-position: center;
     background-size: 100% 100%;
     transform: translateZ(-25px) rotateY(180deg);
@@ -141,7 +141,7 @@ body{
     left: 0;
     width: 100%;
     height: 100%;
-    background: url(Imga/fotos/w1.jpeg);
+    background: url(Imga/fotos/14.jpg);
     background-position: center;
     background-size: 100% 100%;
     transform: translateZ(-25px) rotateY(180deg);
@@ -191,7 +191,7 @@ body{
     left: 0;
     width: 100%;
     height: 100%;
-    background: url(Imga/fotos/w1.jpeg);
+    background: url(Imga/fotos/14.jpg);
     background-position: center;
     background-size: 100% 100%;
     transform: translateZ(-25px) rotateY(180deg);
@@ -241,7 +241,7 @@ body{
     left: 0;
     width: 100%;
     height: 100%;
-    background: url(Imga/fotos/w1.jpeg);
+    background: url(Imga/fotos/14.jpg);
     background-position: center;
     background-size: 100% 100%;
     transform: translateZ(-25px) rotateY(180deg);
@@ -291,7 +291,7 @@ body{
     left: 0;
     width: 100%;
     height: 100%;
-    background: url(Imga/fotos/w1.jpeg);
+    background: url(Imga/fotos/14.jpg);
     background-position: center;
     background-size: 100% 100%;
     transform: translateZ(-25px) rotateY(180deg);
@@ -351,7 +351,7 @@ body{
     left: 0;
     width: 100%;
     height: 100%;
-    background: url(Imga/fotos/w1.jpeg );
+    background: url(Imga/fotos/14.jpg);
     background-position: center;
     background-size: 100% 100%;
     transform: translateZ(-25px) rotateY(180deg);
