--- a/style.css
+++ b/style.css
@@ -6,10 +6,8 @@
 
 
 body{
-    background:url("Imga/fotos/10.png");
-    background-attachment: fixed;
-    background-repeat: no-repeat;
-    background-size: cover;
+    
+    background-color:dimgray;
 }
 
 
